// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledButton should render correctly on Android the button with type cancel 1`] = `
<TouchableOpacity>
  <View
    style={
      Array [
        Object {
          "borderRadius": 100,
          "justifyContent": "center",
          "padding": 15,
        },
        Object {
          "backgroundColor": "hsla(0, 0%, 100%, 1)",
          "borderColor": "hsla(210, 8%, 35%, 1)",
          "borderWidth": 1,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableOpacity>
`;

exports[`StyledButton should render correctly on Android the button with type confirm 1`] = `
<TouchableOpacity>
  <View
    style={
      Array [
        Object {
          "borderRadius": 100,
          "justifyContent": "center",
          "padding": 15,
        },
        Object {
          "backgroundColor": "hsla(205, 97%, 43%, 1)",
          "minHeight": 50,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableOpacity>
`;

exports[`StyledButton should render correctly on Android the button with type normal 1`] = `
<TouchableOpacity>
  <View
    style={
      Array [
        Object {
          "borderRadius": 100,
          "justifyContent": "center",
          "padding": 15,
        },
        Object {
          "backgroundColor": "hsla(0, 0%, 100%, 1)",
          "borderColor": "hsla(205, 97%, 43%, 1)",
          "borderWidth": 1,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableOpacity>
`;

exports[`StyledButton should render correctly on Android the button with type orange 1`] = `
<TouchableOpacity>
  <View
    style={
      Array [
        Object {
          "borderRadius": 100,
          "justifyContent": "center",
          "padding": 15,
        },
        Object {
          "borderColor": "hsla(24, 93%, 50%, 1)",
          "borderWidth": 1,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableOpacity>
`;

exports[`StyledButton should render correctly on iOS the button with type cancel 1`] = `
<Button
  containerStyle={
    Array [
      Object {
        "borderRadius": 100,
        "justifyContent": "center",
        "padding": 15,
      },
      Object {
        "backgroundColor": "hsla(0, 0%, 100%, 1)",
        "borderColor": "hsla(210, 8%, 35%, 1)",
        "borderWidth": 1,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    Array [
      Object {
        "fontFamily": "EuclidCircularB-Bold",
        "fontSize": 14,
        "fontWeight": "600",
        "textAlign": "center",
      },
      Object {
        "color": "hsla(210, 8%, 35%, 1)",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type confirm 1`] = `
<Button
  containerStyle={
    Array [
      Object {
        "borderRadius": 100,
        "justifyContent": "center",
        "padding": 15,
      },
      Object {
        "backgroundColor": "hsla(205, 97%, 43%, 1)",
        "minHeight": 50,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    Array [
      Object {
        "fontFamily": "EuclidCircularB-Bold",
        "fontSize": 14,
        "fontWeight": "600",
        "textAlign": "center",
      },
      Object {
        "color": "hsla(0, 0%, 99%, 1)",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type normal 1`] = `
<Button
  containerStyle={
    Array [
      Object {
        "borderRadius": 100,
        "justifyContent": "center",
        "padding": 15,
      },
      Object {
        "backgroundColor": "hsla(0, 0%, 100%, 1)",
        "borderColor": "hsla(205, 97%, 43%, 1)",
        "borderWidth": 1,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    Array [
      Object {
        "fontFamily": "EuclidCircularB-Bold",
        "fontSize": 14,
        "fontWeight": "600",
        "textAlign": "center",
      },
      Object {
        "color": "hsla(205, 97%, 43%, 1)",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type orange 1`] = `
<Button
  containerStyle={
    Array [
      Object {
        "borderRadius": 100,
        "justifyContent": "center",
        "padding": 15,
      },
      Object {
        "borderColor": "hsla(24, 93%, 50%, 1)",
        "borderWidth": 1,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    Array [
      Object {
        "fontFamily": "EuclidCircularB-Bold",
        "fontSize": 14,
        "fontWeight": "600",
        "textAlign": "center",
      },
      Object {
        "color": "hsla(24, 93%, 50%, 1)",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;
